--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.5)
 
 project(imgui-extras)
 
-add_library(imgui-extras STATIC imgui_extras.cpp)
+add_library(imgui-extras STATIC imgui_extras.h imgui_extras.cpp)
